--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@
 APP_ENV=dev
 APP_SECRET=39f6b1f9666bc3f25ad6a7fc665786ee
 ###< symfony/framework-bundle ###
+
+REDIS_HOST=symfony_redis
+REDIS_PORT=6379
