--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,10 @@
         "symfony/yaml": "6.0.*"
     },
     "require-dev": {
+        "phpunit/phpunit": "^11.5",
+        "symfony/browser-kit": "6.0.*",
+        "symfony/css-selector": "6.0.*",
+        "symfony/dom-crawler": "6.0.*"
     },
     "config": {
         "allow-plugins": {
